# wt_backend

./: Cargo.toml  README.md
migrations/2020-11-07-204627_create_comments/: down.sql  up.sql
migrations/2020-12-06-122828_create_wtcup_2020/: down.sql  up.sql
migrations/2021-12-31-050748_create_wtcup_2021/: down.sql  up.sql
migrations/2023-01-01-144003_create_wtcup_2022/: down.sql  up.sql
src/: dark_colors.rs  error.rs  main.rs  models.rs  schema.rs
src/api/: analytics.rs  comment.rs  common.rs  event.rs  mod.rs  user.rs
src/database/: analytics.rs  chapter.rs  comments.rs  common.rs  db_executor.rs  mod.rs
