[package]
name = "wt_analytics"
version = "0.1.0"
authors = ["Rin Tepis <scucumber@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.2.0"
actix-rt = "1.1.1"
actix-cors = "0.5.1"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
serde = "1.0.117"
indoc = "1.0.3"
rand = "0.7.3"
regex = "1"
lazy_static = "1.4.0"
serde_repr = "0.1.6"
seahash = "4.0.1"
md5 = "0.7.0"
percent-encoding = "2.1.0"

