[package]
name = "wt_analytics"
version = "0.1.0"
authors = ["Rin Tepis <scucumber@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-rt = "2.7.0"
actix-cors = "0.6.4"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
indoc = "1.0.3"
rand = "0.7.3"
regex = "1"
lazy_static = "1.4.0"
serde_repr = "0.1.6"
seahash = "4.0.1"
md5 = "0.7.0"
percent-encoding = "2.1.0"

